# KatabaticPATEGAN

./: README.md  codi.ipynb  codimodels.py  evaluation.py  pategan.ipynb  pyproject.toml  start.py  test_train_split.py  utils.py
Results/car/: pategan_tstr.csv
katabatic/: __init__.py
katabatic/cli/: __init__.py
katabatic/cli/commands/: __init__.py  model_init.py
katabatic/evaluate/: base_evaluation.py
katabatic/models/: __init__.py  base_model.py  registry.py
katabatic/models/ganblr/: models.py  pyproject.toml
katabatic/models/pategan/: README.md  __init__.py  models.py  utils.py
katabatic/pipeline/: base_pipeline.py
katabatic/pipeline/cross_validation/: pipeline.py
katabatic/utils/: split_dataset.py
synthetic/car/pategan/: metadata.json  x_synth.csv  y_synth.csv
